@@ -1,3 +1,6 @@
+2001-05-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* ucsched.cc: changed 0x0b, 0x0c and 0x4d scheduled opcodes (fixing SI gates & wells)
+
 2001-05-06  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Implemented caltrops.  Fixed energy-field animation.
